--- a/index.min.html
+++ b/index.min.html
@@ -4,15 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trace Timeline Visualization</title>
-  
-  <!-- Include vis-timeline library -->
-  <script src="https://unpkg.com/vis-timeline/standalone/umd/vis-timeline-graph2d.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/vis-timeline/styles/vis-timeline-graph2d.min.css">
 
-
-  <script type="module" src="js/main.min.js"></script>
-  <script type="module" src="js/csv.js"></script>
-
+  <vis-handler>
 
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/components.css">
@@ -87,7 +80,11 @@
       <div id="tab3" class="tab-content">
           <h3>WIP</h3>
       </div>
-
+      
+      <script type="module" src="js/main.min.js"></script>
+      <script type="module" src="js/csv.js"></script>
+      <script type="module" src="js/timeline.js"></script>
+      <script type="module" src="js/trace_processing.js"></script>
       <script>
         function openTab(event, tabId) {
             var contents = document.getElementsByClassName("tab-content");
@@ -104,6 +101,7 @@
             event.currentTarget.classList.add("active");
         }
       </script>
+  
     </section>
   </main>
 
