--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <script src="https://unpkg.com/vis-timeline/standalone/umd/vis-timeline-graph2d.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/vis-timeline/styles/vis-timeline-graph2d.min.css">
 
-
-  <script type="module" src="js/main.js"></script>
-
-
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/navigation.css">
@@ -75,6 +71,10 @@
   <footer>
     <p>2024 RATELProf.</p>
   </footer>
+
+  <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/timeline.js"></script>
+  <script type="module" src="js/trace_processing.js"></script>
 </body>
 </html>
 
