--- a/index.min.html
+++ b/index.min.html
@@ -81,10 +81,10 @@
           <h3>WIP</h3>
       </div>
       
-      <script type="module" src="js/main.min.js"></script>
-      <script type="module" src="js/csv.js"></script>
-      <script type="module" src="js/timeline.js"></script>
-      <script type="module" src="js/trace_processing.js"></script>
+      <script src="js/main.min.js"></script>
+      <script src="js/timeline.js"></script>
+      <script src="js/trace_processing.js"></script>
+      <script src="js/csv.js"></script>
       <script>
         function openTab(event, tabId) {
             var contents = document.getElementsByClassName("tab-content");
