--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     <p>2024 RATELProf.</p>
   </footer>
 
-  <script type="module" src="js/main.js"></script>
-  <script type="module" src="js/timeline.js"></script>
-  <script type="module" src="js/trace_processing.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/trace_processing.js"></script>
+  <script src="js/timeline.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
 
