fix merging problem

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </footer>
 
   <script src="js/utils.js"></script>
-  <script src="js/trace_processing.js"></script>
+  <script src="js/TraceProcessor.js"></script>
   <script src="js/timeline.js"></script>
   <script src="js/main.js"></script>
 </body>
