--- a/index.min.html
+++ b/index.min.html
@@ -80,10 +80,11 @@
       <div id="tab3" class="tab-content">
           <h3>WIP</h3>
       </div>
-      
+
+      <script src="js/utils.js"></script>
+      <script src="js/TraceProcessor.js"></script>
       <script src="js/main.min.js"></script>
       <script src="js/timeline.js"></script>
-      <script src="js/trace_processing.js"></script>
       <script src="js/csv.js"></script>
       <script>
         function openTab(event, tabId) {
