--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
     </div>
   </div>
   
+  <div class="info-container">
+    <div class="info-icon">i</div>
+    <div class="tooltip">
+        <strong>How to use the timeline:</strong>
+        <ul>
+            <li>Ctrl + Wheel up to zoom</li>
+            <li>Ctrl + Wheel down to unzoom</li>
+            <li>Left-click and move to navigate</li>
+            <li>Right-click and move to select an area and see its duration</li>
+            <li>Click a trace to highlight it and highlight related sub-traces in red</li>
+            <li>Double-click on a trace to focus on it</li>
+            <li>Drag-n-Drop domain group to change their order</li>
+        </ul>
+    </div>
+  </div>
 
   <main>
     <!-- Timeline Container -->
